# cmake-init-multiple-packages

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
cmake/: install-config.cmake.in  install-rules.cmake  variables.cmake
source/: a.cpp  b.cpp
